--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   lottie: ^3.2.0
   carousel_slider: ^5.0.0
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
