--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  lottie: ^3.2.0
+  lottie: ^3.3.1
   carousel_slider: ^5.0.0
-  provider: ^5.0.0
+  provider: ^6.1.2
+  # smooth_page_indicator: ^1.2.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
