--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   carousel_slider: ^5.0.0
   provider: ^6.1.2
   cached_network_image: ^3.4.1
+  badges: ^3.1.2
 
 
 dev_dependencies:
