--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -10,6 +10,7 @@
 analyzer:
   errors:
     avoid_types_as_parameter_names: ignore
+    dead_code: ignore
 include: package:flutter_lints/flutter.yaml
 
 linter:
